src/objects/Deal__c.object
<CustomObject>
    <description>Sales Manager may have many deals for same car (different time
periods) and same car may have many deals made by various Sales
Managers.</description>
    <fields>
        <fullName>Car__c</fullName>
        <label>Car</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Car__c.Is_Valid_For_Rent__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Car__c</referenceTo>
        <relationshipLabel>Deal</relationshipLabel>
        <relationshipName>Deal</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Email__c</fullName>
        <label>Sales Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <label>Sales Manager</label>
        <referenceTo>SalesManager__c</referenceTo>
        <relationshipLabel>Deal</relationshipLabel>
        <relationshipName>Deal</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>DATETIMEVALUE( TODAY() )</defaultValue>
        <description>Start date of rent, Default Today</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of rent.
Open (DEFAULT) - there is a cliend who called and asked
for a car. Car was reserved but no money paid yet.
Won - deal was successfull, money paid, car rent.
Lost - client refused to pay or cancelled the order.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>end_date_less_one_day__c</fullName>
        <formula>DATETIMEVALUE( TODAY() + 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>end date less one day</label>
        <type>DateTime</type>
    </fields>
    <label>Deal</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>End_date_cant_be_earlier_than_Start_Da</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c &gt;  End_Date__c   &amp;&amp;    ISPICKVAL(Status__c,  &apos;Open&apos; )</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>End date can&apos;t be earlier than Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_deal_with_status_Open_only</fullName>
        <active>true</active>
        <errorConditionFormula>not  ISPICKVAL( Status__c , &apos;Open&apos;) &amp;&amp;  ISNEW()</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>User may create new record with status Open only</errorMessage>
    </validationRules>
</CustomObject>